# CV-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.streamlit/: config.toml
app/: streamlit_app.py
docs/: resume_bullets.md
docs/superpowers/plans/: 2026-07-02-pcb-defect-detection.md  2026-07-06-phase2-rag-repair-advisor.md
eval/: rag_testset.jsonl
knowledge_base/: SOURCES.md  general_bareboard_process_defects.md  general_inspection_criteria.md  general_rework_practices.md  missing_hole_acceptability.md  missing_hole_overview.md  missing_hole_rework.md  mouse_bite_acceptability.md  mouse_bite_overview.md  mouse_bite_rework.md  open_circuit_acceptability.md  open_circuit_overview.md  open_circuit_rework.md  short_acceptability.md  short_overview.md  short_rework.md  spur_acceptability.md  spur_overview.md  spur_rework.md  spurious_copper_acceptability.md  spurious_copper_overview.md  spurious_copper_rework.md
notebooks/: train_colab.ipynb
reports/: dataset_stats.md  evaluation.md  rag_evaluation.md  rag_retrieval_smoke.md  sample_inspection_report.md
scripts/: check_api.py  make_dataset_zip.py  rag_smoke.py
src/pcb_vision/: __init__.py  api.py  data_prep.py  eda.py  evaluate.py  report.py
src/pcb_vision/rag/: __init__.py  evaluate.py  generate.py  ingest.py  providers.py  retrieve.py
tests/: test_api.py  test_data_prep.py  test_rag.py  test_rag_evaluate.py  test_rag_generate.py  test_report.py
